--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    
+  "prepare": "npm install",
     "dev": "concurrently \"npm run server-dev\" \"npm run client-dev\"",
     "server-dev": "ts-node-dev server/index.ts",
     "client-dev": "vite",
     "start": "node dist/server/index.js",
-    "build": "tsc && vite build"
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
